# grandin

./: .gitmodules  CMakeLists.txt  README.md  prerequisite.sh
common/: macros.h  monitor.h  utils.h  uuid.h
deepstream/: CMakeLists.txt  deepstream-test1.cc  dynamic_sink.cc  dynamic_sink.h  testapp.cc  testapp.h  testapp_main.cc
deepstream-samples/: CMakeLists.txt  deepstream-test1.cc
docs/: design.md
gstpp/: CMakeLists.txt  app.h  bus.cc  bus.h  element.cc  element.h  gtk_player.cc  gtk_player.h  loop.h  main_loop.h  message.cc  message.h  pad.cc  pad.h  pipeline.cc  pipeline.h  playbin.cc  playbin.h  recorder.h  source.h
gstpp/samples/: CMakeLists.txt  basic-tutorial-12.cc  ui_sample.cc
service/: CMakeLists.txt  app_manager.cc  app_manager.h  auth_handler.h  auth_manager.cc  auth_manager.h  config_manager.h  grandin_main.cc  http_router.h  uri_params.cc  uri_params.h  video_manager.cc  video_manager.h
test/: CMakeLists.txt  dynamic-recording.c  utils_test.cc
